# osprofiler

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
devstack/lib/: osprofiler
doc/: requirements.txt
doc/source/: Makefile  api.rst  background.rst  collectors.rst  conf.py  index.rst  integration.rst  similar_projects.rst
doc/source/user/: api.rst  collectors.rst  history.rst  index.rst  integration.rst  similar_projects.rst
doc/specs/: README.rst  template.rst
doc/specs/implemented/: README.rst  make_paste_ini_config_optional.rst  multi_backend_support.rst
doc/specs/in-progress/: README.rst  better_devstack_integration.rst  integration_testing.rst  make_paste_ini_config_optional.rst  multi_backend_support.rst
osprofiler/: __init__.py  _utils.py  exc.py  initializer.py  notifier.py  opts.py  profiler.py  requests.py  sqlalchemy.py  utils.py  web.py
osprofiler/_notifiers/: base.py  messaging.py
osprofiler/cmd/: cliutils.py  commands.py  exc.py  shell.py  template.html
osprofiler/drivers/: __init__.py  base.py  ceilometer.py  elasticsearch_driver.py  jaeger.py  loginsight.py  messaging.py  mongodb.py  otlp.py  redis_driver.py  sqlalchemy_driver.py
osprofiler/hacking/: checks.py
osprofiler/parsers/: ceilometer.py
osprofiler/tests/: test.py  test_notifier.py  test_opts.py  test_profiler.py  test_sqlalchemy.py  test_web.py
osprofiler/tests/cmd/: test_shell.py
osprofiler/tests/doc/: test_specs.py
osprofiler/tests/drivers/: test_ceilometer.py  test_elasticsearch.py  test_loginsight.py  test_messaging.py  test_mongodb.py  test_redis_driver.py
osprofiler/tests/functional/: config.cfg  test_driver.py
osprofiler/tests/notifiers/: test_base.py  test_messaging.py
osprofiler/tests/parsers/: test_ceilometer.py
osprofiler/tests/unit/: test_initializer.py  test_notifier.py  test_opts.py  test_profiler.py  test_sqlalchemy.py  test_utils.py  test_web.py
osprofiler/tests/unit/cmd/: test_shell.py
osprofiler/tests/unit/doc/: test_specs.py
osprofiler/tests/unit/drivers/: test_base.py  test_ceilometer.py  test_elasticsearch.py  test_jaeger.py  test_loginsight.py  test_messaging.py  test_mongodb.py  test_otlp.py  test_redis_driver.py
playbooks/: osprofiler-post.yaml
releasenotes/notes/: add-requests-profiling-761e09f243d36966.yaml  deprecate-version-attribute-798320691e4bcb17.yaml  drop-jaeger-container-when-unstacking-e8fcdc036f80158a.yaml  drop-python-2-7-73d3113c69d724d6.yaml  drop-python-3.10-f1f1d5af04cd8729.yaml  jaeger-add-process-tags-79d5f5d7a0b049ef.yaml  jaeger-service-name-prefix-72878a930f700878.yaml  otlp-driver-cb932038ad580ac2.yaml  redis-improvement-d4c91683fc89f570.yaml  retire-jaeger-driver-d8add44c5522ad7a.yaml
releasenotes/source/: conf.py  index.rst
tests/: dummy.py  test.py  test_notifier.py  test_opts.py  test_profiler.py  test_sqlalchemy.py  test_utils.py  test_web.py
tests/cmd/: test_shell.py
tests/doc/: test_specs.py
tests/hacking/: checks.py
tests/notifiers/: test_base.py  test_messaging.py
tests/parsers/: test_ceilometer.py
tools/: lint.py  patch_tox_venv.py
