[metadata]
name = osprofiler
summary = OpenStack Profiler Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/osprofiler/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    osprofiler

[extras]
oslo_config =
  oslo.config>=5.2.0 # Apache-2.0

[entry_points]
oslo.config.opts =
    osprofiler = osprofiler.opts:list_opts
console_scripts =
    osprofiler = osprofiler.cmd.shell:main
paste.filter_factory =
    osprofiler = osprofiler.web:WsgiMiddleware.factory
