[metadata]
name = osprofiler
summary = OpenStack Profiler Library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/osprofiler/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    osprofiler

[extras]
elasticsearch =
    elasticsearch>=2.0.0,<3.0.0 # Apache-2.0
jaeger =
    jaeger-client>=3.8.0 # Apache-2.0
messaging =
    oslo.messaging>=14.1.0 # Apache-2.0
mongo =
    pymongo!=3.1,>=3.0.2 # Apache-2.0
otlp =
    opentelemetry-exporter-otlp>=1.16.0 #Apache-2.0
    opentelemetry-sdk>=1.16.0 # Apache-2.0
redis =
    redis>=2.10.0 # MIT
sqlalchemy =
    SQLAlchemy>=1.4.0 # MIT

[entry_points]
oslo.config.opts =
    osprofiler = osprofiler.opts:list_opts
console_scripts =
    osprofiler = osprofiler.cmd.shell:main
paste.filter_factory =
    osprofiler = osprofiler.web:WsgiMiddleware.factory
